--- a/apps/snmpnetstat/Makefile.depend
+++ b/apps/snmpnetstat/Makefile.depend
@@ -1,9 +1,6 @@
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 ./if.lo: ../../include/net-snmp/net-snmp-config.h
-./if.lo: ../../include/net-snmp/system/linux.h
-./if.lo: ../../include/net-snmp/system/sysv.h
-./if.lo: ../../include/net-snmp/system/generic.h
 ./if.lo: ../../include/net-snmp/machine/generic.h
 ./if.lo: ../../include/net-snmp/net-snmp-includes.h 
 ./if.lo: ../../include/net-snmp/definitions.h ../../include/net-snmp/types.h
@@ -66,14 +63,12 @@
 ./if.lo: ../../include/net-snmp/library/snmp_secmod.h
 ./if.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
 ./if.lo: ../../include/net-snmp/library/snmpusm.h 
-./if.lo:  main.h netstat.h
+./if.lo:   main.h
+./if.lo: netstat.h
 ./inet6.lo: ../../include/net-snmp/net-snmp-config.h
-./inet6.lo: ../../include/net-snmp/system/linux.h
-./inet6.lo: ../../include/net-snmp/system/sysv.h
-./inet6.lo: ../../include/net-snmp/system/generic.h
 ./inet6.lo: ../../include/net-snmp/machine/generic.h 
 ./inet6.lo: ../../include/net-snmp/net-snmp-includes.h 
-./inet6.lo: ../../include/net-snmp/definitions.h
+./inet6.lo:  ../../include/net-snmp/definitions.h
 ./inet6.lo: ../../include/net-snmp/types.h 
 ./inet6.lo: ../../include/net-snmp/library/types.h
 ./inet6.lo: ../../include/net-snmp/library/snmp_api.h
@@ -136,12 +131,9 @@
 ./inet6.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
 ./inet6.lo: ../../include/net-snmp/library/snmpusm.h main.h netstat.h
 ./inet.lo: ../../include/net-snmp/net-snmp-config.h
-./inet.lo: ../../include/net-snmp/system/linux.h
-./inet.lo: ../../include/net-snmp/system/sysv.h
-./inet.lo: ../../include/net-snmp/system/generic.h
 ./inet.lo: ../../include/net-snmp/machine/generic.h 
 ./inet.lo: ../../include/net-snmp/net-snmp-includes.h 
-./inet.lo: ../../include/net-snmp/definitions.h
+./inet.lo:  ../../include/net-snmp/definitions.h
 ./inet.lo: ../../include/net-snmp/types.h 
 ./inet.lo: ../../include/net-snmp/library/types.h
 ./inet.lo: ../../include/net-snmp/library/snmp_api.h
@@ -204,9 +196,6 @@
 ./inet.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
 ./inet.lo: ../../include/net-snmp/library/snmpusm.h main.h netstat.h
 ./main.lo: ../../include/net-snmp/net-snmp-config.h
-./main.lo: ../../include/net-snmp/system/linux.h
-./main.lo: ../../include/net-snmp/system/sysv.h
-./main.lo: ../../include/net-snmp/system/generic.h
 ./main.lo: ../../include/net-snmp/machine/generic.h
 ./main.lo: ../../include/net-snmp/net-snmp-includes.h 
 ./main.lo: ../../include/net-snmp/definitions.h
@@ -273,12 +262,9 @@
 ./main.lo: ../../include/net-snmp/library/snmpusm.h 
 ./main.lo:  main.h netstat.h
 ./route.lo: ../../include/net-snmp/net-snmp-config.h
-./route.lo: ../../include/net-snmp/system/linux.h
-./route.lo: ../../include/net-snmp/system/sysv.h
-./route.lo: ../../include/net-snmp/system/generic.h
 ./route.lo: ../../include/net-snmp/machine/generic.h 
 ./route.lo: ../../include/net-snmp/net-snmp-includes.h 
-./route.lo:  ../../include/net-snmp/definitions.h
+./route.lo: ../../include/net-snmp/definitions.h
 ./route.lo: ../../include/net-snmp/types.h 
 ./route.lo: ../../include/net-snmp/library/types.h
 ./route.lo: ../../include/net-snmp/library/snmp_api.h
@@ -342,12 +328,9 @@
 ./route.lo: ../../include/net-snmp/library/snmpusm.h 
 ./route.lo:  main.h netstat.h
 ./winstub.lo: ../../include/net-snmp/net-snmp-config.h
-./winstub.lo: ../../include/net-snmp/system/linux.h
-./winstub.lo: ../../include/net-snmp/system/sysv.h
-./winstub.lo: ../../include/net-snmp/system/generic.h
 ./winstub.lo: ../../include/net-snmp/machine/generic.h
 ./winstub.lo: ../../include/net-snmp/net-snmp-includes.h 
-./winstub.lo: ../../include/net-snmp/definitions.h
+./winstub.lo:  ../../include/net-snmp/definitions.h
 ./winstub.lo: ../../include/net-snmp/types.h 
 ./winstub.lo: ../../include/net-snmp/library/types.h
 ./winstub.lo: ../../include/net-snmp/library/snmp_api.h
@@ -408,4 +391,4 @@
 ./winstub.lo: ../../include/net-snmp/library/lcd_time.h
 ./winstub.lo: ../../include/net-snmp/library/snmp_secmod.h
 ./winstub.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
-./winstub.lo: ../../include/net-snmp/library/snmpusm.h
+./winstub.lo: ../../include/net-snmp/library/snmpusm.h 
