--- a/apps/snmpnetstat/Makefile.depend
+++ b/apps/snmpnetstat/Makefile.depend
@@ -72,6 +72,7 @@
 ./if.lo: ../../include/net-snmp/library/lcd_time.h
 ./if.lo: ../../include/net-snmp/library/snmp_secmod.h
 ./if.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
+./if.lo: ../../include/net-snmp/library/snmptsm.h
 ./if.lo: ../../include/net-snmp/library/snmpusm.h
 ./if.lo: main.h
 ./if.lo: netstat.h
@@ -144,6 +145,7 @@
 ./inet6.lo: ../../include/net-snmp/library/lcd_time.h
 ./inet6.lo: ../../include/net-snmp/library/snmp_secmod.h
 ./inet6.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
+./inet6.lo: ../../include/net-snmp/library/snmptsm.h
 ./inet6.lo: ../../include/net-snmp/library/snmpusm.h main.h netstat.h
 ./inet.lo: ../../include/net-snmp/net-snmp-config.h
 ./inet.lo: ../../include/net-snmp/net-snmp-includes.h
@@ -214,6 +216,7 @@
 ./inet.lo: ../../include/net-snmp/library/lcd_time.h
 ./inet.lo: ../../include/net-snmp/library/snmp_secmod.h
 ./inet.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
+./inet.lo: ../../include/net-snmp/library/snmptsm.h
 ./inet.lo: ../../include/net-snmp/library/snmpusm.h main.h netstat.h
 ./inetx.lo: ../../include/net-snmp/net-snmp-config.h
 ./inetx.lo: ../../include/net-snmp/net-snmp-includes.h
@@ -284,6 +287,7 @@
 ./inetx.lo: ../../include/net-snmp/library/lcd_time.h
 ./inetx.lo: ../../include/net-snmp/library/snmp_secmod.h
 ./inetx.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
+./inetx.lo: ../../include/net-snmp/library/snmptsm.h
 ./inetx.lo: ../../include/net-snmp/library/snmpusm.h main.h netstat.h
 ./main.lo: ../../include/net-snmp/net-snmp-config.h
 ./main.lo: ../../include/net-snmp/net-snmp-includes.h
@@ -354,6 +358,7 @@
 ./main.lo: ../../include/net-snmp/library/lcd_time.h
 ./main.lo: ../../include/net-snmp/library/snmp_secmod.h
 ./main.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
+./main.lo: ../../include/net-snmp/library/snmptsm.h
 ./main.lo: ../../include/net-snmp/library/snmpusm.h main.h netstat.h
 ./route.lo: ../../include/net-snmp/net-snmp-config.h
 ./route.lo: ../../include/net-snmp/net-snmp-includes.h
@@ -424,6 +429,7 @@
 ./route.lo: ../../include/net-snmp/library/lcd_time.h
 ./route.lo: ../../include/net-snmp/library/snmp_secmod.h
 ./route.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
+./route.lo: ../../include/net-snmp/library/snmptsm.h
 ./route.lo: ../../include/net-snmp/library/snmpusm.h main.h netstat.h
 ./routex.lo: ../../include/net-snmp/net-snmp-config.h
 ./routex.lo: ../../include/net-snmp/net-snmp-includes.h
@@ -494,6 +500,7 @@
 ./routex.lo: ../../include/net-snmp/library/lcd_time.h
 ./routex.lo: ../../include/net-snmp/library/snmp_secmod.h
 ./routex.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
+./routex.lo: ../../include/net-snmp/library/snmptsm.h
 ./routex.lo: ../../include/net-snmp/library/snmpusm.h main.h netstat.h
 ./winstub.lo: ../../include/net-snmp/net-snmp-config.h
 ./winstub.lo: ../../include/net-snmp/net-snmp-includes.h
@@ -564,4 +571,5 @@
 ./winstub.lo: ../../include/net-snmp/library/lcd_time.h
 ./winstub.lo: ../../include/net-snmp/library/snmp_secmod.h
 ./winstub.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
+./winstub.lo: ../../include/net-snmp/library/snmptsm.h
 ./winstub.lo: ../../include/net-snmp/library/snmpusm.h
